2003-01-16  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/microtek2.c backend/microtek2.h: Bugfix for the X12USL
	  (solved problems >600dpi), one for lineart mode with a 6400XL
	  and one for Scanmaker 5 (crashes at sendgamma). From Karsten Festag
	  <karsten.festag@gmx.de>.

2003-01-15  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* sanei/sanei_usb.c: Don't call usb_clearhalt and usb_set_altinterface
	  to avoid errors on Mac OS X.
	* doc/descriptions/unsupported.desc: Added HP 5490c.

2003-01-14  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* NEWS: Updated list of backends.
	* doc/sane-usb.man: Added remark about old name of usbfs.
	* doc/descriptions/unsupported.desc: Added Artec Ultima 2000 (0x4001
	  model), Canon CanoScan D660U, Compaq S200, Epson Perfection 660,
	  HP ScanJet 4570C, Microtek ScanMaker 3630. Updated ScanJet 5400C and
	  5470C URLs, Canon FB1210 information.

2003-01-13  Jochen Eisinger <jochen.eisinger@gmx.de>

	* backend/mustek_pp*, backend/Makefile: merged all mustek_pp
	  related files into one compile unit and removed illegal symbols

2003-01-13  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/descriptions/unsupported.desc: Added HP ScanJet 2300C and various chipset
	  information for the unsupported Plustek devices  	
	* doc/descriptions/plustek.desc: cleanup


---- FEATURE FREEZE FOR SANE 1.0.10 ---
-- snapshot 1.0.10-pre1

2003-01-12  Jochen Eisinger <jochen.eisinger@gmx.de>

	* doc/sane-mustek_pp.man, doc/descriptions/mustek_pp.desc,
	  backend/mustek_pp*: replaced the old mustek_pp backend with
	  version 12-alpha. This version fully supports CIS scanners but
	  removes support for 600dpi CCD scanners and the 300dpi CCD
	  support isn't yet working. In contrary to the old backend, this
	  version is based on information provided by Mustek. For now,
	  the backend exports lots of illegal symbols, this will be fixed
	  before code freeze. Also the .desc file is empty and will be updated
	  soon.