@@ -10,7 +10,7 @@
 ;
 
 :backend "leo"                    ; name of backend
-:version "1.0-9"                  ; version of backend
+:version "1.0-10"                  ; version of backend
 :status :beta                      ; :alpha, :beta, :stable, :new
 :manpage "sane-leo"               ; name of manpage (if it exists)
 :url "http://fz.eryx.net/sane/#leo" ; backend's web page
