@@ -13,6 +13,10 @@ LEO LEOScan S3:
  016: 4C 45 4F 53 63 61 6E 2D 53 33 20 20 20 20 20 20    LEOScan-S3
  032: 33 2E 30 31 09 F6 0D B6 01 2C 01 2C 39 36 30 30    3.01.....,.,9600
 
+or
+ 000: 06 00 02 02 1f 00 00 00 4c 45 4f 00 00 00 00 00    ........LEO.....
+ 016: 4c 45 4f 53 63 61 6e 2d 53 33 00 00 00 00 00 00    LEOScan-S3......
+ 032: 31 2e 31 30                                        1.10 
 
 /*--------------------------------------------------------------------------*/
 
